--- a/package.json
+++ b/package.json
@@ -11,22 +11,49 @@
         "Snippets"
     ],
     "contributes": {
-        "languages": [{
-            "id": "p2tas",
-            "aliases": ["Portal 2 TAS script", "p2tas"],
-            "extensions": [".p2tas"],
-            "configuration": "./language-configuration.json"
-        }],
-        "grammars": [{
-            "language": "p2tas",
-            "scopeName": "source.p2tas",
-            "path": "./syntaxes/p2tas.tmLanguage.json"
-        }],
+        "languages": [
+            {
+                "id": "p2tas",
+                "aliases": [
+                    "Portal 2 TAS script",
+                    "p2tas"
+                ],
+                "extensions": [
+                    ".p2tas"
+                ],
+                "configuration": "./language-configuration.json"
+            }
+        ],
+        "grammars": [
+            {
+                "language": "p2tas",
+                "scopeName": "source.p2tas",
+                "path": "./syntaxes/p2tas.tmLanguage.json"
+            }
+        ],
         "snippets": [
             {
                 "language": "p2tas",
                 "path": "./snippets.json"
             }
         ]
+    },
+    "activationEvents": [
+        "*"
+    ],
+    "main": "./out/extension.js",
+    "scripts": {
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -p ./",
+        "lint": "eslint . --ext .ts,.tsx",
+        "watch": "tsc -watch -p ./"
+    },
+    "devDependencies": {
+        "@types/node": "^12.12.0",
+        "@types/vscode": "^1.32.0",
+        "@typescript-eslint/eslint-plugin": "^4.16.0",
+        "@typescript-eslint/parser": "^4.16.0",
+        "eslint": "^7.21.0",
+        "typescript": "^4.2.2"
     }
 }
