Add insert as relative tick command
This command asks you for a relative tick and inserts it at your
cursor position (or replaces your selection) as a relative tick.

--- a/package.json
+++ b/package.json
@@ -41,10 +41,33 @@
                 "language": "p2tas",
                 "path": "./snippets.json"
             }
+        ],
+        "commands": [
+            {
+                "command": "p2tas-lang.relativeFromAbsoluteTick",
+                "title": "Relative tick from absolute tick",
+                "category": "P2-TAS"
+            }
+        ],
+        "menus": {
+            "commandPalette": [
+                {
+                    "command": "p2tas-lang.relativeFromAbsoluteTick",
+                    "when": "editorLangId == p2tas"
+                }
+            ]
+        },
+        "keybindings":[
+            {
+                "command": "p2tas-lang.relativeFromAbsoluteTick",
+                "key": "ctrl+shift+t",
+                "mac": "cmd+shift+t"
+            }
         ]
     },
     "activationEvents": [
-        "onLanguage:p2tas"
+        "onLanguage:p2tas",
+        "onCommand:p2tas-lang.relativeFromAbsoluteTick"
     ],
     "main": "./out/extension.js",
     "scripts": {
