--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Syntax highlighting, snippets, autocompletion for the Portal 2 TASing script language",
     "version": "0.4.0",
     "publisher": "RainbowwPhoenixx",
+    "icon": "images/logo128.png",
     "repository": {
         "type": "git",
         "url": "https://github.com/RainbowwPhoenixx/p2tas-lang"
