--- a/package.json
+++ b/package.json
@@ -136,16 +136,17 @@
         "onLanguage:p2tas",
         "onCommand:p2tas-lang.relativeFromAbsoluteTick"
     ],
-    "main": "./out/extension.js",
+    "main": "./client/out/extension.js",
     "scripts": {
         "vscode:prepublish": "npm run compile",
-        "compile": "tsc -p ./",
-        "lint": "eslint . --ext .ts,.tsx",
-        "watch": "tsc -watch -p ./"
+        "compile": "tsc -b",
+        "watch": "tsc -b -w",
+        "lint": "eslint ./client/src ./server/src --ext .ts,.tsx",
+        "postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
+        "test": "sh ./scripts/e2e.sh"
     },
     "devDependencies": {
         "@types/node": "^12.12.0",
-        "@types/vscode": "^1.32.0",
         "@typescript-eslint/eslint-plugin": "^4.16.0",
         "@typescript-eslint/parser": "^4.16.0",
         "eslint": "^7.21.0",
