Add settings for the user
The user can now change some behavior of the extension / the language
server via settings in the editor.
Settings:
- Whether to show the active tools display
- Whether to ask the user for confirmation when changing fields in the
  sidebar
- Whether the language server should emit diagnostics (useful when some
  SAR feature has not been implemented yet)

Changes to these settings will be reacted to immediately.

fix #6

--- a/package.json
+++ b/package.json
@@ -134,6 +134,26 @@
                     "contextualTitle": "TAS integration"
                 }
             ]
+        },
+        "configuration": {
+            "title": "P2-TAS Tools Language",
+            "properties": {
+                "p2tas-lang.showActiveToolsDisplay": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Show a piece of text at the end of the current line, showing the currently active tools in their execution order."
+                },
+                "p2tas-lang.confirmFieldChangesInSidebar": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Ask for confirmation when changing fields in the sidebar."
+                },
+                "p2tasLanguageServer.doErrorChecking": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Check the current file for errors."
+                }
+            }
         }
     },
     "activationEvents": [
