--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/RainbowwPhoenixx/p2tas-lang"
+		"url": "https://github.com/p2sr/p2tas-lang"
 	},
 	"dependencies": {
 		"vscode-languageserver": "^7.0.0",
